bug fix (scrolls) and footer

--- a/hirek.html
+++ b/hirek.html
@@ -30,7 +30,7 @@
           <p class="date">2019.03.21</p>
         </article>
       </div>
-      <footer> <p>Ut lobortis dictum justo tincidunt commodo. Pellentesque odio arcu, consectetur a quam sit amet, luctus sagittis nulla.</p></footer>
+      <footer> <p>A honlap készítés alatt áll, hamarosan a Bán Manufaktúra információi olvashatóak rajta. A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplass</a> oldaláról.</p></footer>
     </div>
   
 </body>
