--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="assets/avatar.jpg" alt="kép a gazdáról" id="avatar">
         <p>Nullam efficitur purus in lectus rutrum pellentesque. Morbi rutrum quam non erat semper, eget auctor ipsum vehicula. Fusce ut bibendum mi, quis fermentum tellus. Nam a diam eget elit elementum hendrerit in eget quam. Morbi id tortor vitae elit vulputate aliquam a ac libero. Ut lobortis dictum justo tincidunt commodo. Pellentesque odio arcu, consectetur a quam sit amet, luctus sagittis nulla. Phasellus pulvinar lacus eget elit eleifend posuere. Integer euismod vulputate lectus ut tempus. Nunc condimentum diam et tortor posuere vehicula.</p>
       </article>
-      <footer> <p>Ut lobortis dictum justo tincidunt commodo. Pellentesque odio arcu, consectetur a quam sit amet, luctus sagittis nulla.</p></footer>
+      <footer> <p>A honlap készítés alatt áll, hamarosan a Bán Manufaktúra információi olvashatóak rajta. A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplass</a> oldaláról.</p></footer>
     </div>
   
 </body>
