adding actual content

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
         <ul>
           <li> <a href="index.html" >Bemutatkozás</a></li>
           <li><a href="hirek.html">Hírek</a></li>
-          <li id="active"><a href="kontakt.html">Kontakt</a></li>
+          <li id="active"><a href="kontakt.html">Elérhetőség</a></li>
         </ul>
       </div>
       
@@ -22,23 +22,20 @@
         <table>
           <tr>
             <td><i class="fas fa-mobile-alt"></i></td>
-            <td>+3670/11-11-111</td>
+            <td>+3670/626-77-77</td>
           </tr>
           <tr>
             <td><i class="fas fa-envelope"></i></td>
-            <td><a href="mailto:@gmail.com" >@gmail.com</a></td>
+            <td><a href="mailto:banmanufaktura@gmail.com" >banmanufaktura@gmail.com</a></td>
           </tr>
           <tr>
             <td><i class="fas fa-map-marker-alt"></i></td>
-            <td>Helvécia, </td>
+            <td>6034 Helvecia Fehértói dülő 47 a</td>
           </tr>
         </table>
-        <a href="#"><i class="fab fa-facebook-square facebook"></i></a>
       </div>
-      
 
-
-      <footer> <p>A honlap készítés alatt áll, hamarosan a Bán Manufaktúra információi olvashatóak rajta. A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplass</a> oldaláról.</p></footer>
+      <footer> <p>A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> oldaláról.</p></footer>
     </div>
   
 </body>
