--- a/hirek.html
+++ b/hirek.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,24 +13,31 @@
         <ul>
           <li> <a href="index.html" >Bemutatkozás</a></li>
           <li id="active"><a href="hirek.html">Hírek</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
+          <li><a href="kontakt.html">Elérhetőség</a></li>
         </ul>
       </div>
       <div id="newsfeed">
         <article class="news">
-          <h1>Donec nec elit ut leo semper convallis sit amet et odio.</h1>
-          <img src="assets/avatar.jpg" alt="kép a gazdáról">
-          <p>Nullam efficitur purus in lectus rutrum pellentesque. Morbi rutrum quam non erat semper, eget auctor ipsum vehicula. Fusce ut bibendum mi, quis fermentum tellus. Nam a diam eget elit elementum hendrerit in eget quam. Morbi id tortor vitae elit vulputate aliquam a ac libero. Ut lobortis dictum justo tincidunt commodo. Pellentesque odio arcu, consectetur a quam sit amet, luctus sagittis nulla. Phasellus pulvinar lacus eget elit eleifend posuere. Integer euismod vulputate lectus ut tempus. Nunc condimentum diam et tortor posuere vehicula.</p>
+          <h1>Ellés történt!</h1>
+          
+          <p>A tenyészet magyartarka közelellős tehenekkel bővült!</p>
+          <div class="imagecontainer">
+            <img src="assets/elles1.jpg" alt="Megellett a tehén" class="news-image">
+            <img src="assets/elles2.jpg" alt="A gazda és a borjú" class="news-image">
+          </div>
           <p class="date">2018.02.21</p>
         </article>
         <article class="news">
-          <h1>Donec nec elit ut leo semper convallis sit amet et odio.</h1>
-          <img src="assets/avatar.jpg" alt="kép a gazdáról" >
-          <p>Nullam efficitur purus in lectus rutrum pellentesque. Morbi rutrum quam non erat semper, eget auctor ipsum vehicula. Fusce ut bibendum mi, quis fermentum tellus. Nam a diam eget elit elementum hendrerit in eget quam. Morbi id tortor vitae elit vulputate aliquam a ac libero. Ut lobortis dictum justo tincidunt commodo. Pellentesque odio arcu, consectetur a quam sit amet, luctus sagittis nulla. Phasellus pulvinar lacus eget elit eleifend posuere. Integer euismod vulputate lectus ut tempus. Nunc condimentum diam et tortor posuere vehicula.</p>
-          <p class="date">2019.03.21</p>
+          <h1>Megnyílt a helvéciai telephelyem!</h1>
+          <p>Sikeresen megnyitottam a telephelyem, melyen magyartarka fajta tenyésztése kezdődik. Az állományt saját szaporításból tervezem bővíteni, illetve terveim között szerepel egy kis húsfedolgozó üzem nyitása, működtetése is. </p>
+          <div class="imagecontainer">
+            <img src="assets/tehén.jpg" alt="Egy szép magyartarka" class="news-image">
+            <img src="assets/üsző.jpg" alt="A jószágok" class="news-image">
+          </div>
+          <p class="date">2016.03.17</p>
         </article>
       </div>
-      <footer> <p>A honlap készítés alatt áll, hamarosan a Bán Manufaktúra információi olvashatóak rajta. A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplass</a> oldaláról.</p></footer>
+      <footer> <p>A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> oldaláról.</p></footer>
     </div>
   
 </body>
