--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,15 +13,15 @@
         <ul>
           <li id="active"> <a href="index.html" >Bemutatkozás</a></li>
           <li><a href="hirek.html">Hírek</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
+          <li><a href="kontakt.html">Elérhetőség</a></li>
         </ul>
       </div>
       <article id="content">
-        <h1>Donec nec elit ut leo semper convallis sit amet et odio.</h1>
+        <h1>Üdvözöllek honlapomon!</h1>
         <img src="assets/avatar.jpg" alt="kép a gazdáról" id="avatar">
-        <p>Nullam efficitur purus in lectus rutrum pellentesque. Morbi rutrum quam non erat semper, eget auctor ipsum vehicula. Fusce ut bibendum mi, quis fermentum tellus. Nam a diam eget elit elementum hendrerit in eget quam. Morbi id tortor vitae elit vulputate aliquam a ac libero. Ut lobortis dictum justo tincidunt commodo. Pellentesque odio arcu, consectetur a quam sit amet, luctus sagittis nulla. Phasellus pulvinar lacus eget elit eleifend posuere. Integer euismod vulputate lectus ut tempus. Nunc condimentum diam et tortor posuere vehicula.</p>
+        <p>Bán Márk vagyok és a fiatal gazda pályázat keretein belül megnyitottam a szarvasmarha telepemet 2016-ban, melyet saját szaporulattal szeretnék felfuttatni, valamint ezt a későbbiek folyamán létrehozott kis húsfeldolgozó üzemben feldolgozni.</p>
       </article>
-      <footer> <p>A honlap készítés alatt áll, hamarosan a Bán Manufaktúra információi olvashatóak rajta. A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplass</a> oldaláról.</p></footer>
+      <footer> <p>A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> oldaláról.</p></footer>
     </div>
   
 </body>
