--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" type="text/css" href="index.css" >
  <title>Bán manufaktúra</title>
 </head>
@@ -17,9 +18,11 @@
         </ul>
       </div>
       <article id="content">
-        <h1>Üdvözöllek honlapomon!</h1>
         <img src="assets/avatar.jpg" alt="kép a gazdáról" id="avatar">
-        <p>Bán Márk vagyok és a fiatal gazda pályázat keretein belül megnyitottam a szarvasmarha telepemet 2016-ban, melyet saját szaporulattal szeretnék felfuttatni, valamint ezt a későbbiek folyamán létrehozott kis húsfeldolgozó üzemben feldolgozni.</p>
+        <div id="introduction">
+          <h1>Üdvözöllek honlapomon!</h1>
+          <p>Bán Márk vagyok és a fiatal gazda pályázat keretein belül megnyitottam a szarvasmarha telepemet 2016-ban, melyet saját szaporulattal szeretnék felfuttatni, valamint ezt a későbbiek folyamán létrehozott kis húsfeldolgozó üzemben feldolgozni.</p>
+        </div>
       </article>
       <footer> <p>A tartalom szerzői jog védelme alatt áll! A háttérkép <a href="https://unsplash.com/@stijntestrake?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stijn te Strake</a> fotója az <a href="https://unsplash.com/s/photos/cow-farm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> oldaláról.</p></footer>
     </div>
