profil picture and a little fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
       </div>
       <article id="content">
-        <img src="assets/avatar.jpg" alt="kép a gazdáról" id="avatar">
+        <img src="assets/profil.jpg" alt="kép a gazdáról" id="avatar">
         <div id="introduction">
           <h1>Üdvözöllek honlapomon!</h1>
           <p>Bán Márk vagyok és a fiatal gazda pályázat keretein belül megnyitottam a szarvasmarha telepemet 2016-ban, melyet saját szaporulattal szeretnék felfuttatni, valamint ezt a későbbiek folyamán létrehozott kis húsfeldolgozó üzemben feldolgozni.</p>
